postgis (1.4.0-2) experimental; urgency=low

  * Better parameterized debian/rules against postgis $(VERSION).
  * Added dblatex and libcunit1-dev among build-deps.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 15 Oct 2009 10:23:07 +0200

postgis (1.4.0-1) experimental; urgency=low

  * New upstream release. 
  * Updated configure arguments now obsolete/changed.
  * Required some new var initialization for installing in debian/ its trees.
  * The liblwgeom solib is now named postgis, so changed a few things around.
  * Updated build-dep: proj -> libproj-dev.
  * Policy bumped to 3.8.3. No changes.
  * Debhelper level set to 7.
  * Added ${misc:Depends}.
  * Now postgresql >= 8.3, geos >= 3 and proj >= 4.5 are required. This is
    reflected in debian/control for safety.
  * Added PostgreSQL 8.4 support, the 8.3 version will be dropped when 
    required. Now the .in template for postrm changed for multiversioning.
  * Now build-dep on default-jdk which is DFSG-safe.
  * Removed Fabio Tranchitella among Uploaders because retired from DebianGis.
  * Now build-dep on imagemagick because doc generation requires convert tool.
  * Added patch install.dpatch to manage minor inconsistencies in the java
    inatallation scripts. 
  * stamp files are now auto-cleaned.
  * Cleaned debian/rules to be idempotent.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 14 Sep 2009 11:58:45 +0200

postgis (1.3.5-1) unstable; urgency=low

  * New upstream release.
  * debian/control: bumped Standard-Versions to 3.8.0, no changes needed.
  * debian/rules: copy utils/*.pl to the binary package. (Closes: #491154)

 -- Fabio Tranchitella <kobold@debian.org>  Thu, 05 Mar 2009 22:47:15 +0100

postgis (1.3.3-3) unstable; urgency=low

  * Added Vcs-* fields in debian/control.
  * Fixed download URL in debian/copyright.
  * Now it installs the shared lib in a private postgis path and makes a
    hard link in the postgres library path at configure time. That would